# zivpn-xsocks-core

./: .gitignore  ANDROID_BACKGROUND_OPERATIONS_IMPROVEMENTS.md  AUDIT_REPORT.md  BACKGROUND_IMPROVEMENTS_SUMMARY.md  CHANGELOG.md  PERF_EXECUTION_REPORT.md  RESET_HANDLER_IMPROVEMENTS.md  TODO.md  analysis_options.yaml  perf_results.json  pubspec.yaml  repro_exploit  repro_vuln
.circleci/: config.yml
.github/workflows/: build-check.yml  build-xsocks-migration.yml  build.yml  release-publish.yml  xsock.yaml
analysis/reports/: binary_understanding.md  libload_sections.txt  libload_strings_sample.txt  libuz_deps.txt  libuz_header.txt  libuz_strings_sample.txt
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/minizivpn/app/: BackgroundOperationManager.kt  BootReceiver.kt  KeepAliveService.kt  MainActivity.kt  NativeSystem.kt  NetworkProbe.kt  Pdnsd.kt  PerformanceOptimizer.kt  ProxyUsageManager.kt  ProxyUsageRepository.kt  Routing.kt  RoutingUtils.kt  SecureDnsProxy.kt  TrafficStatsCompat.kt  ZivpnService.kt
android/app/src/main/res/drawable/: ic_notification_jet.xml  ic_notification_plane.xml
android/app/src/main/res/values/: styles.xml
conductor/: tracks.md
docs/: c_bug_audit.md  native-performance-plan.md
integration/: Android.mk  benchmark.c  libuz_wrapper.c
lib/: main.dart
lib/common/: num.dart
lib/logic/: ping_logic.dart
lib/models/: account.dart  app_version.dart  autopilot_config.dart  autopilot_state.dart  ping_log_entry.dart
lib/repositories/: backup_repository.dart  update_repository.dart
lib/screens/: app_selector_page.dart  home_page.dart
lib/screens/tabs/: autopilot_tab.dart  dashboard_tab.dart  logs_tab.dart  proxies_tab.dart  settings_tab.dart
lib/services/: autopilot_service.dart  notification_service.dart  ping_stabilizer_ffi.dart
lib/utils/: format_utils.dart
lib/viewmodels/: update_viewmodel.dart
lib/widgets/: donation_widgets.dart  ping_button.dart
native/: CMakeLists.txt
native/badvpn/: CMakeLists.txt
native/badvpn/lemon/: lemon.c
native/badvpn/lime/: lemon.c
native/badvpn/lwip/src/api/: api_lib.c  api_msg.c
native/badvpn/lwip/src/core/: dns.c  netif.c  udp.c
native/badvpn/lwip/src/core/ipv4/: autoip.c
native/badvpn/lwip/src/core/ipv6/: ip6_frag.c
native/badvpn/lwip/src/netif/ppp/: ppp.c
native/badvpn/lwip/test/unit/tcp/: test_tcp.c
native/badvpn/misc/: ipaddr.h  ipaddr6.h  nonblocking.h
native/badvpn/ncd/modules/: net_backend_rfkill.c
native/badvpn/socksclient/: BSocksClient.c  BSocksClient.h
native/badvpn/system/: BAddr.h  BConnection.h  BConnection_unix.c
native/badvpn/tun2socks/: CMakeLists.txt  MemoryPool.c  MemoryPool.h  SmartPortPlanner.h  SocksUdpGwClient.c  SocksUdpGwClient.h  UdpgwStabilizer.c  tun2socks.c  tun2socks.h
native/badvpn/tuntap/: BTap.c  BTap.h
native/badvpn/udpgw/: udpgw.c  udpgw.h
native/crypto/: crypto.c  crypto.h
native/integration/: Android.mk  libuz_wrapper.c
native/jni/: Android.mk  jni_bridge.c
native/libancillary/: fd_recv.c
native/pdnsd/: config.h.in
native/pdnsd/src/: cache.c  conf-parser.c  conff.c  dns.h  dns_answer.c  dns_query.c  dns_query.h  helpers.h  icmp.c  icmp.h
native/perf/: tun2socks_perf_harness.cpp
native/src/badvpn/: CMakeLists.txt
native/src/badvpn/lwip/custom/: lwipopts.h
native/src/badvpn/lwip/src/core/: dhcp.c  tcp.c  tcp_in.c  tcp_out.c
native/src/badvpn/lwip/src/include/lwip/: api.h  netif.h
native/src/badvpn/lwip/src/netif/ppp/: ppp_oe.c
native/src/badvpn/ncd/extra/: NCDIfConfig.c
native/src/badvpn/system/: BReactor_badvpn.c
native/src/badvpn/tun2socks/: MemoryPool.c  MemoryPool.h  SocksUdpGwClient.c  tun2socks.c  tun2socks.h
native/src/pdnsd/: config.h
native/src/pdnsd/src/: dns_answer.c  helpers.h  icmp.c
native/src/system/: system.cpp
native/system/: background_manager.c  background_manager.h  jni_background.cpp  signal_handler.c  signal_handler.h  smart_mode.c  smart_mode.h  system.cpp
native/tun2socks/: SmartPortPlanner.c  SocksUdpGwClient.c  SocksUdpGwClient.h  UdpgwStabilizer.h  reset_handler.c  reset_handler.h  tun2socks.c  tun2socks_main_wrapper.c
native/tun2socks/badvpn/: client.go
native/tun2socks/buffer/allocator/: allocator_test.go
native/tun2socks/mobile/: http_proxy.go
native/tun2socks/tunnel/: restricted_nat_test.go  tunnel.go
project/analysis/: libload_dynsyms.txt  libload_header.txt  libload_segments.txt  libload_strings.txt  libload_symbols.txt  libuz_dynsyms.txt  libuz_sections.txt  libuz_segments.txt  libuz_strings.txt  libuz_symbols.txt
project/analysis/reports/: binary_understanding.md
project/binaries/hooks/: frida_hysteria_hooks.js
project/integration/: Android.mk  benchmark.c  jni_wrapper.c  libuz_wrapper.c
project/integration/mock/: jni.h
project/scripts/: identify_functions.py
scripts/: 01_basic_analysis.sh  build_check.sh  compare_performance.sh  delete_failed_runs.sh
scripts/perf/: run_matrix.py
test/: ping_logic_test.dart
test/common/: num_test.dart
test/repositories/: backup_repository_test.dart  update_repository_test.dart
test/screens/: app_selector_page_test.dart
test/screens/tabs/: logs_tab_test.dart
test/utils/: format_utils_test.dart
test/viewmodels/: update_viewmodel_test.dart
